--- a/index.html
+++ b/index.html
@@ -155,34 +155,68 @@
         </div>
     </section>
 
-    <section id="about" class="section-padding bg-light">
+   <section id="about" class="section-padding bg-light">
         <div class="container">
             <div class="about-wrapper">
                 <div class="about-img-box">
-                    <div class="img-placeholder" style="height: 450px;">
-                        [รูปพี่ขวัญใส่สูท/ทำงาน]<br>
-                        Profile Photo<br>
-                        (Size: 400x500px)
+                    <div class="about-img-box">
+                        <img src="images/profile.jpg" alt="Pawach Kulteerajesada" class="img-cover" style="height: 500px;">
                     </div>
                 </div>
                 <div class="about-text">
                     <h2 class="section-title">
-                        <span lang="th">ทำความรู้จัก "ขวัญ" (Lao E-Biz Advisor)</span>
-                        <span lang="en">Meet "Khwan"</span>
+                        <span lang="th">เบื้องหลังความสำเร็จของคุณ: "คุณขวัญ" ภวัช</span>
+                        <span lang="en">Meet Your Strategist: Pawach (Khwan)</span>
                     </h2>
-                    <p lang="th"><strong>"ผมไม่ใช่กูรูทฤษฎี แต่ผมคือคนทำงานจริงในสนาม"</strong></p>
-                    <br>
-                    <p lang="th">อดีต Showroom Manager แบรนด์รถยนต์ชั้นนำในเวียงจันทน์ (MG & Mazda) ผมคลุกคลีกับการขายของ "หลักล้าน" ให้คนลาวมานับไม่ถ้วน ผมเห็นวันที่เศรษฐกิจดีที่สุด และวันที่วิกฤตที่สุด</p>
-                    <p lang="th">ผมรู้ว่าทำไมบางเพจคนไลก์เป็นแสนแต่ขายไม่ได้ และทำไมบางเพจเงียบๆ แต่ยอดโอนหลักล้าน... ผมพร้อมเอาความลับนี้มาช่วยธุรกิจของคุณครับ</p>
                     
-                    <div class="img-placeholder" style="height: 100px; margin-top: 20px;">
-                        [Logo แบรนด์รถที่เคยดูแล หรือ Certificate]<br>Credibility Logos
+                    <h3 style="color: #0f2c59; margin-bottom: 10px;">
+                        <span lang="th">10 ปี ในสมรภูมิธุรกิจยานยนต์และการเงินลาว</span>
+                        <span lang="en">10+ Years in Lao Automotive & Finance Market</span>
+                    </h3>
+
+                    <p lang="th">
+                        ผมไม่ใช่โค้ชออนไลน์ทั่วไป แต่ผมคือ <strong>นักบริหารมืออาชีพ (Senior Manager)</strong> ที่ผ่านสนามจริงในการบริหารธุรกิจระดับประเทศในลาวมากว่าทศวรรษ 
+                        เชี่ยวชาญพิเศษด้านการวางกลยุทธ์การขาย, สินเชื่อยานยนต์ และการพัฒนาธุรกิจ (Business Development)
+                    </p>
+                    <p lang="en">
+                        Highly accomplished Senior Manager with over 10 years of in-depth experience in Automotive Sales, Finance, and Operations across Lao markets.
+                    </p>
+
+                    <ul style="margin-top: 20px; list-style: none;">
+                        <li style="margin-bottom: 15px;">
+                            <i class="fas fa-check-circle" style="color: var(--accent); margin-right: 10px;"></i>
+                            <strong>Proven Track Record:</strong> 
+                            <span lang="th">เคยสร้างยอดขายเติบโตถึง 100-150% (YoY Growth) ให้กับองค์กรชั้นนำอย่าง Krungsri Leasing Laos </span>
+                            <span lang="en">Achieved 100-150% Year-over-Year growth for Krungsri Leasing Laos.</span>
+                        </li>
+                        <li style="margin-bottom: 15px;">
+                            <i class="fas fa-check-circle" style="color: var(--accent); margin-right: 10px;"></i>
+                            <strong>Strategic Leader:</strong> 
+                            <span lang="th">อดีต Head of Sales & Marketing ที่ดูแลดีลเลอร์แบรนด์ดังทั่วลาว (Toyota, Honda, MG, Mazda) </span>
+                            <span lang="en">Former Head of Sales & Marketing managing major dealer networks (Toyota, Honda, MG, Mazda).</span>
+                        </li>
+                        <li style="margin-bottom: 15px;">
+                            <i class="fas fa-check-circle" style="color: var(--accent); margin-right: 10px;"></i>
+                            <strong>Local Insight:</strong> 
+                            <span lang="th">เชี่ยวชาญโครงสร้างเศรษฐกิจลาว และพฤติกรรมผู้บริโภคระดับบน (Elite) อย่างลึกซึ้ง [cite: 6]</span>
+                            <span lang="en">Expert in the Lao economic landscape and high-end consumer dynamics.</span>
+                        </li>
+                    </ul>
+
+                    <div style="margin-top: 30px; padding: 15px; background: white; border-left: 4px solid var(--accent); box-shadow: 0 2px 10px rgba(0,0,0,0.05);">
+                        <p lang="th" style="font-style: italic;">
+                            "ผมใช้เครื่องมือระดับองค์กร (Power BI, Google Analytics)  ในการวิเคราะห์ตลาด ไม่ใช่การเดา
+                            เพื่อให้มั่นใจว่าทุกงบประมาณของคุณ จะเปลี่ยนเป็นยอดขายได้จริง"
+                        </p>
+                        <p lang="en" style="font-style: italic;">
+                            "I use enterprise-level tools (Power BI, Google Analytics) to analyze the market, ensuring every cent of your budget converts into real sales."
+                        </p>
+                        <p style="margin-top: 10px; font-weight: bold;">- Pawach Kulteerajesada (Khwan)</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
     <section id="services" class="section-padding">
         <div class="container">
             <h2 class="section-title text-center">
