--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lao E-Biz Advisor - ปลดล็อกตลาดลาวฉบับคนวงใน</title>
+    <title>Thai Lao E-Biz Advisor - ปลดล็อกตลาดลาวฉบับคนวงใน</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -48,7 +48,7 @@
 
     <header>
         <nav>
-            <a href="#hero" class="logo">Lao E-Biz Advisor</a>
+            <a href="#hero" class="logo">Thai Lao E-Biz Advisor</a>
             <div class="menu-toggle" id="mobile-menu">
                 <i class="fas fa-bars"></i>
             </div>
@@ -165,8 +165,8 @@
                 </div>
                 <div class="about-text">
                     <h2 class="section-title">
-                        <span lang="th">เบื้องหลังความสำเร็จของคุณ: "คุณขวัญ" ภวัช</span>
-                        <span lang="en">Meet Your Strategist: Pawach (Khwan)</span>
+                        <span lang="th">เบื้องหลังความสำเร็จ</span>
+                        <span lang="en">Meet Your Strategist: </span>
                     </h2>
                     
                     <h3 style="color: #0f2c59; margin-bottom: 10px;">
@@ -186,32 +186,32 @@
                         <li style="margin-bottom: 15px;">
                             <i class="fas fa-check-circle" style="color: var(--accent); margin-right: 10px;"></i>
                             <strong>Proven Track Record:</strong> 
-                            <span lang="th">เคยสร้างยอดขายเติบโตถึง 100-150% (YoY Growth) ให้กับองค์กรชั้นนำอย่าง Krungsri Leasing Laos </span>
-                            <span lang="en">Achieved 100-150% Year-over-Year growth for Krungsri Leasing Laos.</span>
+                            <span lang="th">เคยสร้างยอดขายเติบโตให้กับองค์กรชั้นนำอย่าง Krungsri Leasing Laos </span>
+                            <span lang="en">Achieved Year-over-Year growth for Krungsri Leasing Laos.</span>
                         </li>
                         <li style="margin-bottom: 15px;">
                             <i class="fas fa-check-circle" style="color: var(--accent); margin-right: 10px;"></i>
                             <strong>Strategic Leader:</strong> 
-                            <span lang="th">อดีต Head of Sales & Marketing ที่ดูแลดีลเลอร์แบรนด์ดังทั่วลาว (Toyota, Honda, MG, Mazda) </span>
-                            <span lang="en">Former Head of Sales & Marketing managing major dealer networks (Toyota, Honda, MG, Mazda).</span>
+                            <span lang="th">อดีต Head of Sales & Marketing ที่ดูแลดีลเลอร์แบรนด์ดังทั่วลาว </span>
+                            <span lang="en">Former Head of Sales & Marketing managing major dealer networks .</span>
                         </li>
                         <li style="margin-bottom: 15px;">
                             <i class="fas fa-check-circle" style="color: var(--accent); margin-right: 10px;"></i>
                             <strong>Local Insight:</strong> 
-                            <span lang="th">เชี่ยวชาญโครงสร้างเศรษฐกิจลาว และพฤติกรรมผู้บริโภคระดับบน (Elite) อย่างลึกซึ้ง [cite: 6]</span>
+                            <span lang="th">เชี่ยวชาญโครงสร้างเศรษฐกิจลาว และพฤติกรรมผู้บริโภคระดับบน (Elite) อย่างลึกซึ้ง</span>
                             <span lang="en">Expert in the Lao economic landscape and high-end consumer dynamics.</span>
                         </li>
                     </ul>
 
                     <div style="margin-top: 30px; padding: 15px; background: white; border-left: 4px solid var(--accent); box-shadow: 0 2px 10px rgba(0,0,0,0.05);">
                         <p lang="th" style="font-style: italic;">
-                            "ผมใช้เครื่องมือระดับองค์กร (Power BI, Google Analytics)  ในการวิเคราะห์ตลาด ไม่ใช่การเดา
+                            "ผมใช้เครื่องมือระดับองค์กรในการวิเคราะห์ตลาด ไม่ใช่การเดา
                             เพื่อให้มั่นใจว่าทุกงบประมาณของคุณ จะเปลี่ยนเป็นยอดขายได้จริง"
                         </p>
                         <p lang="en" style="font-style: italic;">
-                            "I use enterprise-level tools (Power BI, Google Analytics) to analyze the market, ensuring every cent of your budget converts into real sales."
+                            "I use enterprise-level tools to analyze the market, ensuring every cent of your budget converts into real sales."
                         </p>
-                        <p style="margin-top: 10px; font-weight: bold;">- Pawach Kulteerajesada (Khwan)</p>
+                        <p style="margin-top: 10px; font-weight: bold;">-(Khwan)</p>
                     </div>
                 </div>
             </div>
@@ -331,7 +331,7 @@
                         <div class="img-placeholder" style="height: 180px; width: 180px; margin-bottom: 20px;">
                             [QR Code LINE Official]<br>Scan to Chat
                         </div>
-                        <p><i class="fab fa-facebook"></i> Lao E-Biz Advisor</p>
+                        <p><i class="fab fa-facebook"></i> Thai Lao E-Biz Advisor</p>
                         <p><i class="fab fa-line"></i> @yourlineid</p>
                         <p><i class="fas fa-envelope"></i> contact@laoebiz.com</p>
                     </div>
@@ -353,7 +353,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Lao E-Biz Advisor. All Rights Reserved.</p>
+        <p>&copy; 2026 Thai Lao E-Biz Advisor. All Rights Reserved.</p>
         <p style="font-size: 0.8rem; margin-top: 10px; color: #777;">Designed by Khwan Strategy</p>
     </footer>
 
