--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .hero-bg-placeholder {
             background-color: #0f2c59; /* สีสำรอง */
             /* ใส่รูป Background ตรงนี้ */
-            background-image: linear-gradient(rgba(15, 44, 89, 0.85), rgba(15, 44, 89, 0.7)), url('https://via.placeholder.com/1920x1080/cccccc/969696?text=Hero+Background+Image');
+            background-image: linear-gradient(rgba(15, 44, 89, 0.85), rgba(15, 44, 89, 0.7)), url('images/hero.png');
             background-size: cover;
             background-position: center;
         }
