--- a/index.html
+++ b/index.html
@@ -46,12 +46,19 @@
 </head>
 <body>
 
-    <header>
+   <header>
         <nav>
-            <a href="#hero" class="logo">Thai Lao E-Biz Advisor</a>
+            <a href="#hero" class="logo">
+                <div style="background: #e9ecef; color: #6c757d; width: 160px; height: 50px; display: flex; align-items: center; justify-content: center; font-size: 14px; font-weight: bold; border: 2px dashed #ced4da; border-radius: 5px;">
+                    LOGO HERE
+                </div>
+                
+                </a>
+
             <div class="menu-toggle" id="mobile-menu">
                 <i class="fas fa-bars"></i>
             </div>
+
             <ul class="nav-links">
                 <li><a href="#market-reality"><span lang="th">ตลาดลาววันนี้</span><span lang="en">Market Reality</span></a></li>
                 <li><a href="#services"><span lang="th">บริการ</span><span lang="en">Services</span></a></li>
