--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <nav>
             <a href="#hero" class="logo">
                 <div style="background: #e9ecef; color: #6c757d; width: 160px; height: 50px; display: flex; align-items: center; justify-content: center; font-size: 14px; font-weight: bold; border: 2px dashed #ced4da; border-radius: 5px;">
-                    LOGO HERE
+                    images/logo.png
                 </div>
                 
                 </a>
