--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 </head>
 <body>
 
-   <header>
-        <nav>
-            <a href="#hero" class="logo">
-                <div style="background: #e9ecef; color: #6c757d; width: 160px; height: 50px; display: flex; align-items: center; justify-content: center; font-size: 14px; font-weight: bold; border: 2px dashed #ced4da; border-radius: 5px;">
-                    images/logo.png
-                </div>
+  <header style="height: 90px; display: flex; align-items: center;"> <nav style="height: 100%; padding: 0 20px;">
+            <a href="#hero" class="logo" style="display: flex; align-items: center; height: 100%;">
                 
-                </a>
+                <img src="images/logo.png" 
+                     alt="Thai Lao E-Biz Advisor Logo" 
+                     style="height: 75px; width: auto; object-fit: contain;">
+                     
+            </a>
 
             <div class="menu-toggle" id="mobile-menu">
                 <i class="fas fa-bars"></i>
