--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <header style="height: 90px; display: flex; align-items: center;"> 
         <nav style="height: 100%; padding: 0 20px;">
             <a href="#hero" class="logo" style="display: flex; align-items: center; height: 100%;">
-                <img src="images/Thai Lao E Biz Logo.png" 
+                <img src="images/Thai Lao E Biz Logo2.jpg" 
                      alt="Thai Lao E-Biz Advisor Logo" 
                      style="height: 75px; width: auto; object-fit: contain;">
             </a>
@@ -71,7 +71,7 @@
     <section id="hero" class="hero-section hero-bg-placeholder">
         <div class="hero-content">
             
-            <img src="images/Thai Lao E Biz Logo.png" alt="Logo Big" 
+            <img src="images/Logo2.jpg" alt="Logo Big" 
                  style="height: 150px; width: auto; margin-bottom: 30px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.3);">
             
             <h1 lang="th">เลิก "ตำน้ำพริกละลายแม่น้ำโขง"<br>เจาะตลาดลาว ยุค 2026 ต้องแม่นยำ</h1>
