--- a/index.html
+++ b/index.html
@@ -217,32 +217,62 @@
         <div class="container">
             <div class="about-wrapper">
                 <div class="about-img-box">
-                     <img src="images/profile.jpg" alt="Pawach Kulteerajesada" class="img-cover" style="height: 400px; object-position: top;">
+                    <div class="about-img-box">
+                        <img src="images/profile.jpg" alt="Pawach Kulteerajesada" class="img-cover" style="height: 500px;">
+                    </div>
                 </div>
                 <div class="about-text">
-                    <h2 class="section-title" style="margin-bottom: 20px;">
-                        <span lang="th">เบื้องหลังความสำเร็จ</span>
-                        <span lang="en">Meet Your Strategist</span>
+                    <h2 class="section-title">
+                        <span lang="th">เบื้องหลังความสำเร็จของคุณ: "คุณขวัญ" ภวัช</span>
+                        <span lang="en">Meet Your Strategist: Pawach (Khwan)</span>
                     </h2>
                     
-                    <h3 style="color: #0f2c59; margin-bottom: 5px;">ภวช กุลธีระเจษฎา (Pawach Kulteerajesada)</h3>
-                    <p style="color: #d4a373; font-weight: bold; margin-bottom: 20px;">
-                        <span lang="th">ผู้เชี่ยวชาญการตลาดลาว & อดีตผู้บริหารศูนย์รถยนต์</span>
-                        <span lang="en">Lao Market Expert & Ex-Showroom Manager</span>
+                    <h3 style="color: #0f2c59; margin-bottom: 10px;">
+                        <span lang="th">10 ปี บนเส้นทางนักบริหารธุรกิจยานยนต์และการเงินในลาว</span>
+                        <span lang="en">10+ Years Executive Experience in Lao Automotive & Finance Sectors</span>
+                    </h3>
+
+                    <p lang="th">
+                        จากประสบการณ์จริงในการบริหารงานระดับสูง (Senior Management) ให้กับองค์กรชั้นนำข้ามชาติ ผมเชี่ยวชาญการวางระบบหน้าบ้านและหลังบ้าน 
+                        เพื่อเปลี่ยน "สินค้ามูลค่าสูง" ให้กลายเป็นยอดขายจริง ท่ามกลางความท้าทายของเศรษฐกิจลาว
+                    </p>
+                    <p lang="en">
+                        With over a decade of senior management experience for leading multinational corporations, I specialize in end-to-end business strategy, 
+                        transforming high-value products into tangible sales amidst the challenging economic landscape of Laos.
                     </p>
 
-                    <p lang="th" style="margin-bottom: 15px;">
-                        "ตลอด 10 ปีในเวียงจันทน์ ผมเห็นแบรนด์ไทยเข้ามาแล้วก็ไป... เพราะไม่เข้าใจว่าคนที่มีเงินจริงๆ เขาซื้ออะไร"
-                    </p>
-                    <p lang="en" style="margin-bottom: 15px;">
-                        "Throughout 10 years in Vientiane, I've seen Thai brands come and go... simply because they didn't understand what the wealthy actually buy."
-                    </p>
-                    
-                    <ul class="fa-ul" style="margin-left: 20px;">
-                        <li style="margin-bottom: 10px;"><span class="fa-li"><i class="fas fa-check-circle" style="color: #27ae60;"></i></span>Ex-Showroom Manager (MG & Mazda Vientiane)</li>
-                        <li style="margin-bottom: 10px;"><span class="fa-li"><i class="fas fa-check-circle" style="color: #27ae60;"></i></span>10+ Years Experience in Laos</li>
-                        <li><span class="fa-li"><i class="fas fa-check-circle" style="color: #27ae60;"></i></span>Specialized in High-Ticket Sales</li>
+                    <ul style="margin-top: 20px; list-style: none;">
+                        <li style="margin-bottom: 15px;">
+                            <i class="fas fa-check-circle" style="color: #d4a373; margin-right: 10px;"></i>
+                            <strong>Proven Growth:</strong> 
+                            <span lang="th">เคยบริหารทีมขายและวางกลยุทธ์ จนสามารถสร้างยอดขายเติบโตแบบก้าวกระโดด (Triple-Digit Growth) ต่อเนื่องหลายปีซ้อน </span>
+                            <span lang="en">Successfully executed national strategies achieving triple-digit year-over-year growth.</span>
+                        </li>
+                        <li style="margin-bottom: 15px;">
+                            <i class="fas fa-check-circle" style="color: #d4a373; margin-right: 10px;"></i>
+                            <strong>Network Builder:</strong> 
+                            <span lang="th">ขยายเครือข่ายพันธมิตรทางธุรกิจ (Dealers & Agents) ครอบคลุมทั่วประเทศลาว มากกว่า 100 ราย [cite: 21, 23]</span>
+                            <span lang="en">Expanded nationwide dealer and agent networks to over 100 partners.</span>
+                        </li>
+                        <li style="margin-bottom: 15px;">
+                            <i class="fas fa-check-circle" style="color: #d4a373; margin-right: 10px;"></i>
+                            <strong>Data-Driven:</strong> 
+                            <span lang="th">ตัดสินใจด้วยข้อมูลเชิงลึก (Business Intelligence) วิเคราะห์ตลาดด้วยเครื่องมือระดับสากล ไม่ใช้สัญชาตญาณ [cite: 42, 56]</span>
+                            <span lang="en">Utilize Business Intelligence and enterprise-grade data analysis for precise decision making.</span>
+                        </li>
                     </ul>
+
+                    <div style="margin-top: 30px; padding: 15px; background: white; border-left: 4px solid #d4a373; box-shadow: 0 2px 10px rgba(0,0,0,0.05);">
+                        <p lang="th" style="font-style: italic;">
+                            "ความสำเร็จไม่ใช่เรื่องบังเอิญ แต่เกิดจากการวางแผนที่รัดกุมและความเข้าใจในตลาดอย่างถ่องแท้ 
+                            ผมพร้อมนำประสบการณ์ระดับองค์กร มาช่วยยกระดับธุรกิจของคุณ"
+                        </p>
+                        <p lang="en" style="font-style: italic;">
+                            "Success is not accidental; it stems from precise planning and deep market understanding. 
+                            I am ready to bring corporate-level expertise to elevate your business."
+                        </p>
+                        <p style="margin-top: 10px; font-weight: bold;">- Pawach Kulteerajesada</p>
+                    </div>
                 </div>
             </div>
         </div>
