--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <div class="about-wrapper">
                 <div class="about-img-box">
                     <div class="about-img-box">
-                        <img src="images/profile.jpg" alt="Pawach Kulteerajesada" class="img-cover" style="height: 500px;">
+                        <img src="images/Kwan3.jpg" alt="Pawach" class="img-cover" style="height: 500px;">
                     </div>
                 </div>
                 <div class="about-text">
