--- a/index.html
+++ b/index.html
@@ -179,12 +179,9 @@
     <section class="section-padding">
         <div class="container">
             <div class="about-wrapper">
-                <div class="about-img-box">
-                     <div class="img-placeholder" style="height: 350px;">
-                        [รูปกราฟิกแสดงปัญหา: แอดแพง / ลูกค้าเงียบ / ส่งของติดด่าน]<br>
-                        Visual: High Ad Cost / No Sales / Customs Issue<br>
-                        (Size: 500x350px)
-                    </div>
+               <div class="about-img-box">
+    <img src="images/section1.png" alt="กราฟิกแสดงปัญหาธุรกิจ" 
+         style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 25px rgba(0,0,0,0.1);">
                 </div>
                 <div class="about-text">
                     <h2 class="section-title">
