--- a/index.html
+++ b/index.html
@@ -245,11 +245,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="about-img-box">
-                    <div class="img-placeholder" style="height: 400px;">
-                        [รูปคนจับมือทำธุรกิจ / กราฟพุ่งขึ้น]<br>
-                        Business Success / Handshake<br>
-                        (Size: 500x400px)
+               <div class="about-img-box">
+                        <img src="images/section2.png" 
+                         alt="ความสำเร็จทางธุรกิจ การจับมือและกราฟพุ่งขึ้น" 
+                         style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
                     </div>
                 </div>
             </div>
