--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="container">
             <div class="about-wrapper">
                <div class="about-img-box">
-    <img src="images/section1.png" alt="กราฟิกแสดงปัญหาธุรกิจ" 
+    <img src="images/section1.png" alt="" 
          style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 25px rgba(0,0,0,0.1);">
                 </div>
                 <div class="about-text">
@@ -246,8 +246,8 @@
                     </div>
                 </div>
                <div class="about-img-box">
-                        <img src="images/section2.png" 
-                         alt="ความสำเร็จทางธุรกิจ การจับมือและกราฟพุ่งขึ้น" 
+                        <img src="images/section2.jpg" 
+                         alt="" 
                          style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
                     </div>
                 </div>
@@ -320,7 +320,7 @@
             <div class="about-wrapper">
                 <div class="about-img-box">
                     <div class="about-img-box">
-                        <img src="images/Kwan3.jpg" alt="Pawach" class="img-cover" style="height: 500px;">
+                        <img src="images/Kwan3.jpg" alt="" class="img-cover" style="height: 500px;">
                     </div>
                 </div>
                 <div class="about-text">
