--- a/index.html
+++ b/index.html
@@ -264,8 +264,9 @@
 
             <div class="about-wrapper" style="margin-bottom: 60px;">
                 <div class="about-img-box">
-                     <div class="img-placeholder" style="height: 250px;">
-                        [รูป Audit Report / หน้าจอวิเคราะห์เพจ]<br>Page Analysis
+                     <img src="images/section3.jpg" 
+                         alt="" 
+                         style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
                     </div>
                 </div>
                 <div class="about-text">
