--- a/index.html
+++ b/index.html
@@ -255,29 +255,33 @@
         </div>
     </section>
 
-    <section id="services" class="section-padding">
-        <div class="container">
-            <h2 class="section-title text-center">
-                <span lang="th">บริการแบบเจาะลึก</span>
-                <span lang="en">In-Depth Services</span>
-            </h2>
+   <section id="services" class="section-padding">
+    <div class="container">
+        <h2 class="section-title text-center" style="margin-bottom: 50px;">
+            <span lang="th">บริการแบบเจาะลึก</span>
+            <span lang="en">In-Depth Services</span>
+        </h2>
 
-           <div class="about-img-box">
+        <div class="about-wrapper" style="margin-bottom: 60px;">
+            <div class="about-img-box">
                 <img src="images/section3.jpg" 
-                 alt="" 
-                 style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
-                    </div>
-                </div>
-                <div class="about-text">
-                    <h3 lang="th">1. Strategic Page Audit (ผ่าตัดเพจ)</h3>
-                    <p lang="th">บริการตรวจสุขภาพเพจ Facebook อย่างละเอียด เพื่อเตรียมความพร้อมก่อนยิงแอด</p>
-                    <ul style="margin-left: 20px; margin-top: 10px;">
-                        <li><strong>Content Localization:</strong> ตรวจสอบภาษาลาว คำแสลง และบริบททางวัฒนธรรม (Cultural Check)</li>
-                        <li><strong>Visual Identity:</strong> ปรับภาพลักษณ์ให้ดู "Premium" ในสายตาคนลาว</li>
-                        <li><strong>Competitor Analysis:</strong> วิเคราะห์คู่แข่งในตลาดเดียวกัน เพื่อหาช่องว่างในการทำกำไร</li>
-                    </ul>
-                </div>
+                     alt="Strategic Page Audit" 
+                     style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
             </div>
+            <div class="about-text">
+                <h3 lang="th" style="color: #0f2c59; margin-bottom: 15px;">1. Strategic Page Audit (ผ่าตัดเพจ)</h3>
+                <h3 lang="en" style="color: #0f2c59; margin-bottom: 15px;">1. Strategic Page Audit</h3>
+                
+                <p lang="th">บริการตรวจสุขภาพเพจ Facebook อย่างละเอียด เพื่อเตรียมความพร้อมก่อนยิงแอด</p>
+                <p lang="en">Comprehensive Facebook Page audit to ensure readiness before running ads.</p>
+
+                <ul style="margin-left: 20px; margin-top: 10px; line-height: 1.8;">
+                    <li><strong>Content Localization:</strong> <span lang="th">ตรวจสอบภาษาลาว คำแสลง และบริบททางวัฒนธรรม</span><span lang="en">Check Lao language, slang, and cultural context.</span></li>
+                    <li><strong>Visual Identity:</strong> <span lang="th">ปรับภาพลักษณ์ให้ดู "Premium" ในสายตาคนลาว</span><span lang="en">Enhance visual identity to look "Premium" for Lao audience.</span></li>
+                    <li><strong>Competitor Analysis:</strong> <span lang="th">วิเคราะห์คู่แข่งในตลาดเดียวกัน เพื่อหาช่องว่างในการทำกำไร</span><span lang="en">Analyze competitors to find profitable market gaps.</span></li>
+                </ul>
+            </div>
+        </div>
 
             <div class="about-wrapper" style="flex-direction: row-reverse; margin-bottom: 60px;">
                 <div class="about-img-box">
