--- a/index.html
+++ b/index.html
@@ -283,23 +283,26 @@
             </div>
         </div>
 
-            <div class="about-wrapper" style="flex-direction: row-reverse; margin-bottom: 60px;">
-                <div class="about-img-box">
-                     <div class="img-placeholder" style="height: 250px;">
-                        [รูป Logistic Map / กล่องสินค้า]<br>Logistics Solution
-                    </div>
-                </div>
-                <div class="about-text">
-                    <h3 lang="th">2. Cross-Border Operations (ระบบหลังบ้าน)</h3>
-                    <p lang="th">วางระบบการขายข้ามแดนให้ลื่นไหล เหมือนขายในไทย</p>
-                    <ul style="margin-left: 20px; margin-top: 10px;">
-                        <li><strong>Logistics Partner:</strong> แนะนำบริษัทขนส่งที่เชี่ยวชาญ (Door-to-Door / รับหน้าด่าน)</li>
-                        <li><strong>Payment Gateway:</strong> โซลูชั่นการรับชำระเงิน (BCEL One / Thai QR) ที่เงินเข้าบัญชีคุณทันที</li>
-                        <li><strong>Stock Management:</strong> แนะนำวิธีบริหารสต๊อกโดยไม่ต้องเสี่ยงฝากของไว้ที่ลาวเยอะเกินไป</li>
-                    </ul>
-                </div>
-            </div>
+           <div class="about-wrapper" style="flex-direction: row-reverse; margin-bottom: 60px;">
+    <div class="about-img-box">
+         <img src="images/section4.jpg" 
+              alt="ระบบขนส่งและโลจิสติกส์ข้ามแดน" 
+              style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+    </div>
+    <div class="about-text">
+        <h3 lang="th">2. Cross-Border Operations (ระบบหลังบ้าน)</h3>
+        <h3 lang="en">2. Cross-Border Operations</h3>
 
+        <p lang="th">วางระบบการขายข้ามแดนให้ลื่นไหล เหมือนขายในไทย</p>
+        <p lang="en">Seamless cross-border sales system setup, just like selling domestically.</p>
+
+        <ul style="margin-left: 20px; margin-top: 10px;">
+            <li><strong>Logistics Partner:</strong> <span lang="th">แนะนำบริษัทขนส่งที่เชี่ยวชาญ (Door-to-Door / รับหน้าด่าน)</span><span lang="en">Recommend expert logistics partners.</span></li>
+            <li><strong>Payment Gateway:</strong> <span lang="th">โซลูชั่นการรับชำระเงิน (BCEL One / Thai QR) ที่เงินเข้าบัญชีคุณทันที</span><span lang="en">Instant payment solutions (BCEL One / Thai QR).</span></li>
+            <li><strong>Stock Management:</strong> <span lang="th">แนะนำวิธีบริหารสต๊อกโดยไม่ต้องเสี่ยงฝากของไว้ที่ลาวเยอะเกินไป</span><span lang="en">Stock management advice to minimize risk.</span></li>
+        </ul>
+    </div>
+</div>
             <div class="about-wrapper">
                 <div class="about-img-box">
                      <div class="img-placeholder" style="height: 250px;">
