--- a/index.html
+++ b/index.html
@@ -371,47 +371,71 @@
         </div>
     </section>
 
-    <section id="process" class="section-padding">
-        <div class="container">
-            <h2 class="section-title text-center">
-                <span lang="th">ขั้นตอนการทำงาน (Step-by-Step)</span>
-                <span lang="en">Working Process</span>
-            </h2>
-            <div class="services-grid">
-                <div class="process-step">
-                    <div class="number-badge">1</div>
-                    <div class="img-placeholder" style="height: 100px; margin-bottom: 15px;">[Icon: Chat]</div>
-                    <h4 lang="th">1. Discovery Call (ฟรี)</h4>
-                    <p lang="th" style="font-size: 0.9rem;">พูดคุยเบื้องต้น 15-20 นาที เพื่อประเมินสินค้าและความเป็นไปได้ในตลาดลาว (ถ้าสินค้าไม่ผ่าน ผมจะแจ้งตรงๆ)</p>
+  <section id="process" class="section-padding">
+    <div class="container">
+        <h2 class="section-title text-center">
+            <span lang="th">ขั้นตอนการทำงาน (Step-by-Step)</span>
+            <span lang="en">Working Process</span>
+        </h2>
+        
+        <div class="services-grid">
+            <div class="process-step text-center">
+                <div class="number-badge">1</div>
+                <div style="height: 100px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
+                    <img src="images/call.jpg" alt="Discovery Call" style="max-height: 100%; width: auto; border-radius: 8px;">
                 </div>
-                <div class="process-step">
-                    <div class="number-badge">2</div>
-                    <div class="img-placeholder" style="height: 100px; margin-bottom: 15px;">[Icon: Analysis]</div>
-                    <h4 lang="th">2. Deep Dive Audit</h4>
-                    <p lang="th" style="font-size: 0.9rem;">ชำระค่าบริการ เพื่อเริ่มวิเคราะห์เจาะลึก ตรวจสอบเพจ คู่แข่ง และวางโครงสร้างราคา (Pricing Structure)</p>
+                <h4 lang="th">1. Discovery Call (ฟรี)</h4>
+                <h4 lang="en">1. Discovery Call (Free)</h4>
+                <p lang="th" style="font-size: 0.9rem;">พูดคุยเบื้องต้น 15-20 นาที เพื่อประเมินสินค้าและความเป็นไปได้ในตลาดลาว (ถ้าสินค้าไม่ผ่าน ผมจะแจ้งตรงๆ)</p>
+                <p lang="en" style="font-size: 0.9rem;">A 15-20 min initial talk to assess your product's potential in Laos. I'm honest about feasibility.</p>
+            </div>
+
+            <div class="process-step text-center">
+                <div class="number-badge">2</div>
+                <div style="height: 100px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
+                    <img src="images/analysis.jpg" alt="Deep Dive Audit" style="max-height: 100%; width: auto; border-radius: 8px;">
                 </div>
-                <div class="process-step">
-                    <div class="number-badge">3</div>
-                    <div class="img-placeholder" style="height: 100px; margin-bottom: 15px;">[Icon: Blueprint]</div>
-                    <h4 lang="th">3. Strategy Blueprint</h4>
-                    <p lang="th" style="font-size: 0.9rem;">ส่งมอบแผนกลยุทธ์ (Action Plan) พร้อมรายชื่อ Partner ขนส่ง/การเงิน ที่ต้องติดต่อ</p>
+                <h4 lang="th">2. Deep Dive Audit</h4>
+                <h4 lang="en">2. Deep Dive Audit</h4>
+                <p lang="th" style="font-size: 0.9rem;">ชำระค่าบริการ เพื่อเริ่มวิเคราะห์เจาะลึก ตรวจสอบเพจ คู่แข่ง และวางโครงสร้างราคา (Pricing Structure)</p>
+                <p lang="en" style="font-size: 0.9rem;">Begin in-depth analysis of your page, competitors, and pricing structure after service fee.</p>
+            </div>
+
+            <div class="process-step text-center">
+                <div class="number-badge">3</div>
+                <div style="height: 100px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
+                    <img src="images/blueprint.jpg" alt="Strategy Blueprint" style="max-height: 100%; width: auto; border-radius: 8px;">
                 </div>
-                <div class="process-step">
-                    <div class="number-badge">4</div>
-                    <div class="img-placeholder" style="height: 100px; margin-bottom: 15px;">[Icon: Rocket]</div>
-                    <h4 lang="th">4. Execution & Monitoring</h4>
-                    <p lang="th" style="font-size: 0.9rem;">เริ่มยิงแอด/ขายจริง ผมจะคอย Monitor ผลลัพธ์และแนะนำการปรับแก้ในช่วงแรก</p>
+                <h4 lang="th">3. Strategy Blueprint</h4>
+                <h4 lang="en">3. Strategy Blueprint</h4>
+                <p lang="th" style="font-size: 0.9rem;">ส่งมอบแผนกลยุทธ์ (Action Plan) พร้อมรายชื่อ Partner ขนส่ง/การเงิน ที่ต้องติดต่อ</p>
+                <p lang="en" style="font-size: 0.9rem;">Delivery of your Action Plan along with a list of trusted logistics and financial partners.</p>
+            </div>
+
+            <div class="process-step text-center">
+                <div class="number-badge">4</div>
+                <div style="height: 100px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
+                    <img src="images/rocket.jpg" alt="Execution" style="max-height: 100%; width: auto; border-radius: 8px;">
                 </div>
-                <div class="process-step">
-                    <div class="number-badge">5</div>
-                    <div class="img-placeholder" style="height: 100px; margin-bottom: 15px;">[Icon: Optimize]</div>
-                    <h4 lang="th">5. Optimization (PDCA)</h4>
-                    <p lang="th" style="font-size: 0.9rem;">วิเคราะห์ข้อมูลหลังการขาย ปรับปรุงกระบวนการ เพื่อขยายผล (Scale Up) ในเดือนถัดไป</p>
+                <h4 lang="th">4. Execution & Monitoring</h4>
+                <h4 lang="en">4. Execution & Monitoring</h4>
+                <p lang="th" style="font-size: 0.9rem;">เริ่มยิงแอด/ขายจริง ผมจะคอย Monitor ผลลัพธ์และแนะนำการปรับแก้ในช่วงแรก</p>
+                <p lang="en" style="font-size: 0.9rem;">Go live with ads and sales. I'll monitor results and provide optimization advice during launch.</p>
+            </div>
+
+            <div class="process-step text-center">
+                <div class="number-badge">5</div>
+                <div style="height: 100px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
+                    <img src="images/optimize.jpg" alt="Optimization" style="max-height: 100%; width: auto; border-radius: 8px;">
                 </div>
+                <h4 lang="th">5. Optimization (PDCA)</h4>
+                <h4 lang="en">5. Optimization (PDCA)</h4>
+                <p lang="th" style="font-size: 0.9rem;">วิเคราะห์ข้อมูลหลังการขาย ปรับปรุงกระบวนการ เพื่อขยายผล (Scale Up) ในเดือนถัดไป</p>
+                <p lang="en" style="font-size: 0.9rem;">Post-sales data analysis to refine processes and scale up your business for the next month.</p>
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
     <section id="readiness" class="section-padding">
         <div class="container">
             <div class="checklist-container">
