--- a/index.html
+++ b/index.html
@@ -494,8 +494,8 @@
                             <img src="images/qr-code.jpg" class="img-cover" alt="Line QR">
                         </div>
                         <p><i class="fab fa-facebook"></i> Thai Lao E-Biz Advisor</p>
-                        <p><i class="fab fa-line"></i> @yourlineid</p>
-                        <p><i class="fas fa-envelope"></i> contact@laoebiz.com</p>
+                        <p><i class="fab fa-line"></i> kwan.pawach</p>
+                        <p><i class="fas fa-envelope"></i> kwanpawach@gmail.com</p>
                     </div>
                 </div>
                 
