--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 </footer>
 
 <script>
-    const scriptURL = https://script.google.com/macros/s/AKfycby9zQRSAmoPRrHeZCSCcvebjUmzHTcrRUnKYfT_t363f3b3D1Hx73Fml4la5DF_Uos/exec; // วาง URL จาก Google Apps Script ของคุณ
+    const scriptURL = 'https://script.google.com/macros/s/AKfycby9zQRSAmoPRrHeZCSCcvebjUmzHTcrRUnKYfT_t363f3b3D1Hx73Fml4la5DF_Uos/exec'; // วาง URL จาก Google Apps Script ของคุณ
     const form = document.getElementById('google-sheet-form');
     const btn = document.getElementById('submit-btn');
     const successMsg = document.getElementById('form-success');
