--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 
                 <div class="contact-methods" style="margin-top: 30px;">
                     <div style="margin-bottom: 25px;">
-                        <img src="images/qr-code.jpg" alt="Line QR" style="height: 180px; width: 180px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+                        <img src="images/qr-code.jfif" alt="Line QR" style="height: 180px; width: 180px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
                     </div>
                     
                     <div style="font-size: 1.1rem; line-height: 2;">
